# rxxxt

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  package.json  pnpm-lock.yaml  pyproject.toml  shell.nix  sitemap.xml  web.ts
.github/workflows/: docs.yml  test.yml  (+1 more)
api/: index.html
app/: index.html
asgi/: index.html
component/: index.html
debugging/: index.html
docs/: .gitignore  api.md  app.md  asgi.md  component.md  debugging.md  elements.md  getting-started.md  path-matching.md  router.md  state.md
elements/: index.html
examples/: basic.py  bound-events.py  chat.py  cookiecounter.py  counter-nested-text.py  counter.py  custom-event.py  dev.py  form.py  global-events.py  input-notrigger.py  input.py  navonload.py  new.py  router.py  todo.py  websocket.py  window-events.py  with-fastapi.py
extra/: buildmddocs.py  maketutorial.py  preparedocs.py
getting-started/: index.html
path-matching/: index.html
razz/: __init__.py  asgi.py  component.py  elements.py  execution.py  helpers.py  page.py  server.py  state.py
router/: index.html
rxxxt/: __init__.py  app.py  asgi.py  cell.py  component.py  elements.py  events.py  execution.py  helpers.py  new.py  newstate.py  node.py  page.py  renderer.py  router.py  session.py  state.py
search/: search_index.json
state/: index.html
tests/: helpers.py  test_app.py  test_asgi.py  test_components.py  test_elements.py  test_jwt.py  test_router.py  test_session.py
web/: components.ts  events.ts  index.ts  input-event.ts  transport.ts  types.ts
(+7 files in other folders)
