[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "razz"
version = "0.1.0"
authors = [
  {name = "leopf"},
]
dependencies = [
  "pydantic",
  "PyJWT>=2.9.0"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "uvicorn"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["razz*"]

[tool.ruff]
line-length = 150
indent-width = 2
target-version = "py311"
preview = true

lint.select = [
    "F",
    "W293",
    "W291",
    "W191",
    "W292",
    "W391",
    "E703"
]

include = [
    "razz/*.py",
    "tests/**.py",
    "extra/**.py",
    "examples/**.py",
    "setup.py"
]

[tool.setuptools.package-data]
"razz" = ["assets/*"]